--- a/net/mac802154/Kconfig
+++ b/net/mac802154/Kconfig
@@ -9,7 +9,7 @@ config MAC802154
 
 	  Note: this implementation is neither certified, nor feature
 	  complete! Compatibility with other implementations isn't
-	  tested!
+	  tested yet!
 
 	  If you plan to use HardMAC IEEE 802.15.4 devices, you can
 	  say N here. Alternatievly you can say M to compile it as
