--- a/net/mac802154/Makefile
+++ b/net/mac802154/Makefile
@@ -1,3 +1,2 @@
 obj-$(CONFIG_MAC802154) +=	mac802154.o
-mac802154-objs		:= rx.o tx.o main.o monitor.o wpan.o mac_cmd.o scan.o mib.o \
-			beacon.o beacon_hash.o smac.o
+mac802154-objs		:= rx.o tx.o ieee802154_dev.o monitor.o mac_cmd.o mib.o
